--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,4 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        npm run ng -- deploy --repo="https://github.com/FrancoEdu/easyMarket.git" --base-href=/easyMarket/
+        npx angular-cli-ghpages --dir=dist/easyMarket --repo=https://github.com/FrancoEdu/easyMarket.git --branch=gh-pages --no-silent
