--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@sweetalert2/ngx-sweetalert2": "^13.0.0",
+    "angular-cli-ghpages": "^2.0.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "ngx-toastr": "^19.0.0",
