--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,4 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        npx angular-cli-ghpages --dir=dist/easyMarket --repo=https://github.com/FrancoEdu/easyMarket.git --branch=gh-pages --no-silent
+        npx angular-cli-ghpages --dir=dist/easy-market --repo=https://github.com/FrancoEdu/easyMarket.git --branch=gh-pages --no-silent
