--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,4 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        npm run ng -- deploy --repo="https://github.com/FrancoEdu/easyMarket.git" --base-href=/easyMarket/ --name="Eduardo Franco" --email="franc0edu24@gmail.com"
+         npx angular-cli-ghpages --dir=dist/easy-market --repo=https://github.com/FrancoEdu/easyMarket.git --branch=gh-pages --no-silent --name="Eduardo Franco" --email="franc0edu24@gmail.com"
