--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,14 +20,13 @@ jobs:
       with:
         node-version: 22.13  # Use a versão do Node.js que seu projeto precisa
 
-    - name: Install dependencies
-      run: npm install
-
     - name: Build Angular project
-      run: npm run build -- --configuration production
+      run: npm install && npm run build:prod
     
     - name: Deploy to Github pages
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-         npx angular-cli-ghpages --dir=dist/easy-market --repo=https://github.com/FrancoEdu/easyMarket.git --branch=gh-pages --no-silent --name="Eduardo Franco" --email="franc0edu24@gmail.com"
+      uses: JamesIves/github-pages-deploy-action@releases/v2
+      with:
+        ACESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BASE_BRANCH: master
+        BRANCH: gh-pages
+        FOLDER: dist/browser
