--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       run: npm install
 
     - name: Build Angular project
-      run: npm run build -- --configuration production
+      run: npm run build:prod
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
