--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-cli-ghpages": "^2.0.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "ngx-currency": "^19.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.15.10",
